@@ -46,6 +46,10 @@
     <!-- TODO: remove on Public Preview release -->
     <jacoco.min.linecoverage>0.0</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0.0</jacoco.min.branchcoverage>
+    <javaModulesSurefireArgLine>
+      --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
+      --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
+    </javaModulesSurefireArgLine>
   </properties>
   <dependencies>
     <!-- compile scope -->
@@ -53,7 +57,15 @@
       <groupId>com.openai</groupId>
       <artifactId>openai-java</artifactId>
       <version>4.14.0</version> <!-- {x-version-update;com.openai:openai-java;external_dependency} -->
+      <exclusions>
+        <!-- Prefer okio-jvm to avoid duplicate okio modules on the module path. -->
+        <exclusion>
+          <groupId>com.squareup.okio</groupId>
+          <artifactId>okio</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
+    <!-- Align Okio with azure-core-http-okhttp to prevent module-path conflicts in tests. -->
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core</artifactId>
@@ -78,12 +90,6 @@
       <version>1.27.0-beta.14</version> <!-- {x-version-update;com.azure:azure-core-test;dependency} -->
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>com.azure</groupId>
-      <artifactId>azure-core-http-okhttp</artifactId>
-      <version>1.13.3</version> <!-- {x-version-update;com.azure:azure-core-http-okhttp;dependency} -->
-      <scope>test</scope>
-    </dependency>
 
   </dependencies>
 
@@ -98,6 +104,7 @@
             <bannedDependencies>
               <includes>
                 <include>com.openai:openai-java:[4.14.0]</include> <!-- {x-include-update;com.openai:openai-java;external_dependency} -->
+                <include>com.squareup.okio:okio-jvm:[3.16.0]</include> <!-- {x-include-update;com.squareup.okio:okio-jvm;external_dependency} -->
               </includes>
             </bannedDependencies>
             <requireReleaseDeps>
@@ -110,4 +117,17 @@
       </plugin>
     </plugins>
   </build>
+
+  <repositories>
+    <repository>
+      <id>azure-sdk-for-java</id>
+      <url>https://pkgs.dev.azure.com/azure-sdk/public/_packaging/azure-sdk-for-java/maven/v1</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 </project>
